--- a/Waterstanden meten uit timelapse video.ipynb
+++ b/Waterstanden meten uit timelapse video.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "## Waterstanden meten uit timelapse video\n",
     "\n",
-    "Auteur Rob van Putten, rob.van.putten@waternet.nl, breinbaasnl@gmail.com, 18 december 2017\n",
+    "In de onderstaande uiteenzetting is uitgelegd hoe we in staat zijn om het uitlezen van watermeters die met een timelapse camera gefilmd worden te automatiseren. We maken hierbij gebruik van deep learning om de computer de getallen op de watermeter te laten herkennen. \n",
+    "\n",
+    "**Contact:** Rob van Putten, rob.van.putten@waternet.nl, breinbaasnl@gmail.com\n",
+    "\n",
+    "**Datum:** 18 december 2017\n",
     "\n",
     "### Probleemstelling\n",
     "\n",
@@ -15,6 +19,11 @@
     "![title](img/voorbeeld_img.jpg)\n",
     "\n",
     "### Werkwijze \n",
+    "\n",
+    "We gebruiken een convolutional neuraal netwerk (CNN) om informatie uit de afbeeldingen te gebruiken om een model te trainen dat de cijfers herkent. We proberen het op 2 manieren;\n",
+    "\n",
+    "* 1 - Met gebruik van het standaard MNIST model uit Tensorflow (getrained op handgeschreven cijfers)\n",
+    "* 2 - Een eigen CNN o.b.v. de eigen data (gebaseerd op foto's van watermeters)\n",
     "\n",
     "#### Stap 1 - Extraheren van de afbeeldingen uit het videobestand\n",
     "\n",
@@ -455,18 +464,12 @@
     "* verdere optimalisatie (op naar de 99% zou ik zeggen)\n",
     "* de dataset is skewed.. kijk maar naar de verdeling tussen 0 t/m 9, meer traindata verzamelen waar we info missen\n",
     "* uitwerken naar een productie omgeving\n",
+    "* de accuracy wordt al snel gehaald, we kunnen het aantal epochs waarschijnlijk verlagen waardoor we sneller trainen\n",
     "\n",
     "#### Pas op!\n",
     "\n",
     "* de code werkt in een jupyter notebook niet zo lekker. Als je bij de laatste test bijvoorbeeld constant verkeerde labels krijgt dan kan dat liggen aan het niet goed opslaan van het model in stap 6. Remedie, bouw het model door het script in de commandline uit te voeren i.p.v. in de Jupyter notebook. Doorloop daarna pas stap 7. Misschien dat dit op te lossen is door een InteractiveSession binnen TensorFlow?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
